# hand-tracking

./: .gitignore  README.md  action.yml  basic.yml  pyproject.toml  python-app.yml  requairment.txt  requirements.md  requirements.txt  team-agreament.md
.github/workflows/: basic.yml  python-app.yml
hand_tracking/: pyproject.toml
hand_tracking/hand_tracking/: gui.py  hand_tracking.py  painter.py
hand_tracking/tests/: test_hand_detction.py  test_hand_tracking.py
