[tool.poetry]
name = "hand_tracking"
version = "0.1.0"
description = ""
authors = ["rubakanaan <rubajkanaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"
mediapipe = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
